action-Enhance Id generation