@@ -47,13 +47,9 @@ public class BooksController {
 
     @PostMapping
     public void createBook(@RequestBody BookRequest bookRequest) {
-        long id;
+
         // Generate and assign id for newBook
-        if (books.isEmpty()) {
-            id = 1;
-        } else {
-            id = books.get(books.size() - 1).getId() + 1;
-        }
+        long id = books.isEmpty() ? 1 : books.getLast().getId() + 1;
 
         // Create new Book from BookRequest
         Book newBook = new Book(
